#
# Copyright 2015-2018 Yubico AB
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

[package]
name = "yubihsm-manager"
version = "0.2.0"
description = "Command line tool for YubiHSM 2"
authors = ["Aveen Ismail <aveen.ismail@yubico.com>"]
license = "Apache-2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.26"
serde = "1.0.164"
pem = "2.0.1"
regex = "1.8.4"
rusty_secrets = "0.0.2"
hex = "0.4.3"
base64 = "0.21.2"
scan_dir = "0.3.3"
#openssl-sys = "0.9.88"
cliclack = "0.1.9"
console = "0.15.7"
comfy-table = "7.0.1"

rsa = "0.9.2"
pkcs1 = "0.7.5"
pkcs8 = { version = "0.10.2", features = ["alloc"] }
sec1 = { version = "0.7", features = ["alloc"] }
k256 = { version = "0.13.1", features = ["ecdsa-core"] }
p224 = { version = "0.13.1", features = ["ecdsa"] }
p256 = { version = "0.13.2", features = ["ecdsa-core"] }
p384 = { version = "0.13.0", features = ["ecdsa"] }
p521 = { version = "0.13.0", features = ["ecdsa"] }
spki = { version = "0.7.2", features = ["pem"] }
x509-cert = "0.2.3"
ed25519-dalek = { version = "1.0.1", features = ["std"] }
sha1 = "0.10.5"
sha2 = "0.10.7"


[dependencies.yubihsmrs]
path = "../yubihsmrs/"
version = "2.1.3"
